# CoolocOCR

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-dev.py
app/: app.py  config.py
app/api/: routes.py
app/models/: receipt.py
app/services/: ocr.py
